--- a/base-html/exercise.html
+++ b/base-html/exercise.html
@@ -2,18 +2,32 @@
 <html lang="en"> <!-- Specify primary language for the page -->
 <head>
 	<!-- Set a page title in here! -->
-
+  <title>My Next Web Page</title>
+  <link rel = "stylesheet" href = "../base-css/exercise.css">
 </head>
 <body>
 	<!-- Add a top level header -->
+	<h1 id = "first header"> HELLO! </h1>
 
 	<!-- Add an image here! https://www.sololearn.com/Icons/Courses/1014.png will do -->
+	<img src = "https://www.sololearn.com/Icons/Courses/1014.png" />
 
 	<!-- Add a second level header -->
 	<!-- Add some formatted text! You can use <b> or <i> -->
+  <h2 class = "second-header"> Level 2 Header </h2>
+  <div>
+    <b> Bold text! </b>
+    <i> Italicized text! </i>
+    <br>
+    <a href = "https://www.google.com/">Time to Google</a>
+  </div>
 
 	<!-- Add a second level header -->
+	<h2 id = "purple-header" class = "second-header"> Level 2 Header --- 2! </h2>
 	<!-- Add some formatted text! You can use <b> or <i> -->
+	<div>
+	    <p> Have you <i>ever</i> gone swimming?</p>
+	</div>
 
 </body>
 </html>
